--- a/Ejemplos_Maui_Integracion/Ejemplo_WebAPI_IdentidadQR/Ejemplo_WebAPI_IdentidadQR.csproj
+++ b/Ejemplos_Maui_Integracion/Ejemplo_WebAPI_IdentidadQR/Ejemplo_WebAPI_IdentidadQR.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Mutations\" />
+    <Folder Include="GraphQL\Mutations\" />
   </ItemGroup>
 
 </Project>
